# jb_gfx

./: Cargo.toml  README.md
assets/models/barrel/: barrel.gltf
assets/models/gun/: turret.gltf
assets/models/plane/: plane.gltf
assets/shaders/: blur.frag  blur.vert  combine.frag  default.frag  default.vert  deferred.frag  deferred_lighting.frag  deferred_lighting.vert  diagetic_ui.frag  diagetic_ui.vert  forward.frag  forward.vert  particle.frag  particle.vert  quad.vert  shadow.vert  skybox.frag  skybox.vert  ui.frag  ui.vert
assets/sounds/: CREDITS.md
assets/textures/: CREDITS.md
engine/: Cargo.toml
engine/src/: asset.rs  asset_test.rs  lib.rs  prelude.rs  util.rs
game/: Cargo.toml
game/src/: app.rs  application.rs  asset.rs  asset_test.rs  camera.rs  collision.rs  components.rs  debug_ui.rs  editor.rs  egui_context.rs  input.rs  lib.rs  main.rs  project.rs  turret_game.rs
game/src/turret_game/: player.rs
game/src/util/: frame_timer.rs
jb_gfx/: Cargo.toml
jb_gfx/src/: asset.rs  barrier.rs  bindless.rs  camera.rs  colour.rs  descriptor.rs  device.rs  gpu_structs.rs  lib.rs  light.rs  mesh.rs  particle.rs  pipeline.rs  prelude.rs  renderer.rs  renderpass.rs  resource.rs  targets.rs  util.rs
jb_gfx/src/core/: device.rs
jb_gfx/src/rendergraph/: attachment.rs  mod.rs  physical_resource.rs  resource_tracker.rs  virtual_resource.rs
jb_gfx/src/renderpass/: attachment.rs  barrier.rs  builder.rs  resource.rs
jb_gfx/src/util/: bindless.rs  descriptor.rs  meshpool.rs  targets.rs
src/: device.rs  lib.rs  main.rs  pipeline.rs  renderer.rs
(+3 files in other folders)
