[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
tracy = ["profiling/profile-with-tracy"]

[dependencies]
jb_gfx = { path = "../jb_gfx" }
engine = { path = "../engine" }
winit = "0.28.1"
anyhow = "1.0.70"
cgmath = "0.18"
env_logger = "0.10.0"
egui = "0.21.0"
egui-winit = "0.21.1"
log = "0.4.17"
image = "0.24.5"
kira = "0.7.3"
rand = "0.8.5"

[dependencies.gltf]
version = "1.1.0"
features = ["utils"]

[dependencies.profiling]
version = "1.0.7"