[package]
name = "jb_gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
raw-window-handle = "0.5.0"
ash-window = "0.12.0"
vk-mem-alloc = "0.1.1"
slotmap = "1.0.6"
cgmath = "0.18"
image = "0.24.5"
shaderc = "0.8.2"
log = "0.4.17"
obj = "0.10.2"
anyhow = "1.0.70"
mikktspace = "0.3.0"

[dependencies.ash]
version = "0.37.1"
features = ["linked"]

[dependencies.gltf]
version = "1.1.0"
features = ["utils"]